--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,7 +2,7 @@ name: Docker Image CI
 
 on:
   push:
-    tags:        
+    tags:
       - '*'
 
 jobs:
@@ -22,6 +22,7 @@ jobs:
           # generate Docker tags based on the following events/attributes
           tags: |
             type=ref,event=tag
+
       - name: Login Docker Hub
         uses: docker/login-action@v1
         with:
@@ -39,6 +40,7 @@ jobs:
           key: ${{ runner.os }}-buildx-${{ github.sha }}
           restore-keys: |
             ${{ runner.os }}-buildx-
+
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         id: docker_build
@@ -51,6 +53,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+          build-args: |
+            VERSION=${{ github.event.release.tag_name }}
 
       - name: Verify
         run: echo "-> Done ${{ steps.docker_build.outputs.digest }}" 
