--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -53,9 +53,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-          build-args: |
-            APP_VERSION=${{ github.event.release.tag_name }}
-            GIT_COMMIT=${{ github.sha }}
+          build-args: APP_VERSION=${{ github.event.release.tag_name }},GIT_COMMIT=${{ github.sha }}
 
       - name: Verify
         run: echo "-> Done ${{ steps.docker_build.outputs.digest }}" 
