--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Build For Windows
       run: |
-        go build -v ./cmd/cleaner
+        go build -v -mod=mod -ldflags "-X main.AppVersion=${{ github.event.release.tag_name }} -X main.GitCommit=${{ github.sha }}" ./cmd/cleaner
       if: matrix.os == 'windows-latest'
 
     - name: Upload binaries to release
