--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,6 +41,11 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-buildx-
 
+      - name: Get the version
+        id: get_version
+        run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+        shell: bash
+
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v2
         id: docker_build
@@ -53,7 +58,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
-          build-args: APP_VERSION=${{ github.event.release.tag_name }},GIT_COMMIT=${{ github.sha }}
+          build-args: APP_VERSION=${{ steps.get_version.outputs.VERSION }},GIT_COMMIT=${{ github.sha }}
 
       - name: Verify
         run: echo "-> Done ${{ steps.docker_build.outputs.digest }}" 
