--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,6 @@ jobs:
             asset_name: cleaner${{ github.event.release.tag_name }}-darwin-amd64
 
     steps:
-
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
@@ -32,14 +31,19 @@ jobs:
 
     - uses: actions/checkout@v2
 
+    - name: Get the version
+      id: get_version
+      run: echo ::set-output name=VERSION::${GITHUB_REF/refs\/tags\//}
+      shell: bash
+
     - name: Build For *nix
       run: |
-        CGO_ENABLED=0 go build -v -mod=mod -ldflags "-X main.AppVersion=${{ github.event.release.tag_name }} -X main.GitCommit=${{ github.sha }}" ./cmd/cleaner
+        CGO_ENABLED=0 go build -v -mod=mod -ldflags "-X main.AppVersion=${{ steps.get_version.outputs.VERSION }} -X main.GitCommit=${{ github.sha }}" ./cmd/cleaner
       if: matrix.os != 'windows-latest'
 
     - name: Build For Windows
       run: |
-        go build -v -mod=mod -ldflags "-X main.AppVersion=${{ github.event.release.tag_name }} -X main.GitCommit=${{ github.sha }}" ./cmd/cleaner
+        go build -v -mod=mod -ldflags "-X main.AppVersion=${{ steps.get_version.outputs.VERSION }} -X main.GitCommit=${{ github.sha }}" ./cmd/cleaner
       if: matrix.os == 'windows-latest'
 
     - name: Upload binaries to release
